--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -30,13 +30,13 @@ We set the language of the page to English and add classes for scrollbar and scr
     <script is:inline>
       // Script to handle dark mode. It will check if the theme is stored in localStorage or if dark theme is preferred by system settings
       if (
-        localStorage.getItem("hs_theme") === "dark" ||
+        localStorage.getItem("hs_theme") === "light" ||
         (!("hs_theme" in localStorage) &&
-          window.matchMedia("(prefers-color-scheme: dark)").matches)
+          window.matchMedia("(prefers-color-scheme: light)").matches)
       ) {
-        document.documentElement.classList.add("dark");
+        document.documentElement.classList.add("light");
       } else {
-        document.documentElement.classList.remove("dark");
+        document.documentElement.classList.remove("light");
       }
     </script>
     <script is:inline src="/scripts/vendor/lenis/lenis.js"></script>
