--- a/src/components/sections/pricing/PricingSection.astro
+++ b/src/components/sections/pricing/PricingSection.astro
@@ -135,7 +135,7 @@ interface PricingSectionProps {
       >
     </div>
   </div> -->
-  <div class="border border-[#d3d2d25e] mx-auto mb-10 max-w-2xl text-center px-2 py-3 shadow-xl rounded-lg  lg:mb-14">
+  <div class="border border-[#d3d2d25e] mx-auto mb-10 max-w-2xl text-center text-lg px-2 py-3 shadow-xl rounded-lg  lg:mb-14">
     The cost of websites varies based on factors such as website type, features, complexities, and development time. Contact us with your project idea for a personalized estimated cost for your specific needs.
   </div>
   <!-- Call to action for Enterprise Solutions -->
