--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -124,6 +124,8 @@ const avatarSrcs: Array<string> = [
 
   <PricingSection pricing={pricing} />
 
-  <FAQ title="Frequently<br />asked questions" faqs={faqs} />
-
+  <div id="faq">
+    <FAQ title="Frequently<br />asked questions" faqs={faqs} />
+  </div>
+  
 </MainLayout>
