--- a/src/components/sections/ContactSection.astro
+++ b/src/components/sections/ContactSection.astro
@@ -1,11 +1,7 @@
 ---
 // Import the necessary dependencies.
-import AuthBtn from "../ui/buttons/AuthBtn.astro";
 import ContactIconBlock from "../ui/blocks/ContactIconBlock.astro";
-import TextInput from "../ui/forms/input/TextInput.astro";
-import EmailContactInput from "../ui/forms/input/EmailContactInput.astro";
-import PhoneInput from "../ui/forms/input/PhoneInput.astro";
-import TextAreaInput from "../ui/forms/input/TextAreaInput.astro";
+import ContactBtn from "../ui/buttons/ContactBtn.astro";
 import Icon from "../ui/icons/Icon.astro";
 
 // Define the variables that will be used in this component
@@ -35,43 +31,12 @@ const formSubTitle: string = "We'll get back to you in 1-2 business days.";
         <h2
           class="mb-8 text-xl font-bold text-neutral-700 dark:text-neutral-300"
         >
-          {formTitle}
+          Contact Us
         </h2>
-        <!-- Form for user input with various input fields.-->
-        <!-- Each field utilizes a different input component for the specific type of input (text, email, phone, and textarea)-->
-        <form>
-          <div class="grid gap-4">
-            <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
-              <TextInput
-                id="hs-firstname-contacts"
-                label="First Name"
-                name="hs-firstname-contacts"
-              />
-              <TextInput
-                id="hs-lastname-contacts"
-                label="Last Name"
-                name="hs-firstname-contacts"
-              />
-            </div>
-            <EmailContactInput id="hs-email-contacts" />
-            <PhoneInput id="hs-phone-number" />
-            <TextAreaInput
-              id="hs-about-contacts"
-              label="Details"
-              name="hs-about-contacts"
-            />
-          </div>
-
-          <div class="mt-4 grid">
-            <AuthBtn title="Send Message" />
-          </div>
-
-          <div class="mt-3 text-center">
-            <p class="text-sm text-neutral-600 dark:text-neutral-400">
-              {formSubTitle}
-            </p>
-          </div>
-        </form>
+        <ContactBtn title="Whatsapp" href="https://wa.me/message/Q4SH6APVW7GCG1" />
+        <ContactBtn title="Facebook" href="https://www.facebook.com/danfesolutions/"/>
+        <ContactBtn title="Email" href="mailto:danfesolutions0@gmail.com"/>
+        
       </div>
 
       <!--ContactIconBlocks are used to display different methods of contacting, including visiting office, email, browsing knowledgebase, and FAQ.-->
@@ -81,7 +46,7 @@ const formSubTitle: string = "We'll get back to you in 1-2 business days.";
           content="Browse through all of our knowledgebase articles."
           isLinkVisible={true}
           linkTitle="Visit guides & tutorials"
-          linkURL="#"
+          linkURL="/blog"
           isArrowVisible={true}
           ><Icon name="question" />
         </ContactIconBlock>
@@ -91,25 +56,17 @@ const formSubTitle: string = "We'll get back to you in 1-2 business days.";
           content="Explore our FAQ for quick, clear answers to common queries."
           isLinkVisible={true}
           linkTitle="Visit FAQ"
-          linkURL="#"
+          linkURL="/#faq"
           isArrowVisible={true}
           ><Icon name="chatBubble" />
-        </ContactIconBlock>
-
-        <ContactIconBlock
-          heading="Visit our office"
-          content="UK ScrewFast"
-          isAddressVisible={true}
-          addressContent="72 Union Terrace, E10 4PE London"
-          ><Icon name="mapPin" />
         </ContactIconBlock>
 
         <ContactIconBlock
           heading="Contact us by email"
           content="Prefer the written word? Drop us an email at"
           isLinkVisible={true}
-          linkTitle="support@screwfast.uk"
-          linkURL="#"
+          linkTitle="danfesolutions0@gmail.com"
+          linkURL="mailto:danfesolutions0@gmail.com"
           ><Icon name="envelopeOpen" />
         </ContactIconBlock>
       </div>
