--- a/src/components/ui/cards/CardBlogRecent.astro
+++ b/src/components/ui/cards/CardBlogRecent.astro
@@ -23,7 +23,7 @@ interface Props {
         alt={blogEntry.data.cardImageAlt}
         draggable={"false"}
         loading={"eager"}
-        format={"avif"}
+        format={"jpeg"}
       />
     </div>
   </div>
