--- a/src/components/ui/buttons/ContactBtn.astro
+++ b/src/components/ui/buttons/ContactBtn.astro
@@ -6,7 +6,7 @@ const { href, title } = Astro.props;
     class:list={[
     "flex justify-between", 
     "border border-black px-3 py-3 text-lg rounded my-1",
-    "hover:cursor-pointer hover:text-[#FFF] hover:bg-[#000]",
+    "hover:cursor-pointer hover:text-white hover:bg-black dark:text-white dark:border-white dark:hover:bg-white dark:hover:text-black",
     
     ]}>
     <span class=" font-semibold tracking-wide">{title}</span>
