--- a/src/components/sections/landing/HeroSection.astro
+++ b/src/components/sections/landing/HeroSection.astro
@@ -69,7 +69,7 @@ interface Props {
 
     <!-- Review Section: This section presents avatars, review ratings and the number of reviews -->
     { withReview ? (
-    <ReviewComponent avatars={avatars} starCount={starCount} rating={rating} reviews={reviews} />
+    <ReviewComponent starCount={starCount} rating={rating} reviews={reviews} />
     ) : "" }
 
   </div>
