--- a/src/components/sections/landing/HeroSection.astro
+++ b/src/components/sections/landing/HeroSection.astro
@@ -1,8 +1,6 @@
 ---
 // Import the necessary dependencies
-import { Image } from "astro:assets";
 import PrimaryCTA from "../../ui/buttons/PrimaryCTA.astro";
-import SecondaryCTA from "../../ui/buttons/SecondaryCTA.astro";
 import ReviewComponent from "../../ui/blocks/ReviewComponent.astro";
 import Hero from "../../ui/icons/Hero.astro";
 
@@ -42,7 +40,7 @@ interface Props {
   class="mx-auto grid max-w-[85rem] gap-4 px-4 py-14 sm:px-6 md:grid-cols-2 md:items-center md:gap-8 lg:px-8 2xl:max-w-full"
 >
   <!-- Title and description -->
-  <div>
+  <div class="w-full">
     <!-- Each h1 and p tag renders a portion of the title and subTitle defined above -->
     <h1
       class="block text-balance text-3xl font-bold tracking-tight text-neutral-800 dark:text-neutral-200 sm:text-4xl lg:text-6xl lg:leading-tight"
@@ -58,12 +56,9 @@ interface Props {
     </p>
   }
     <!-- Action Button Section: This section includes two CTAs with their own styles and URL -->
-    <div class="mt-7 grid w-full gap-3 sm:inline-flex">
+    <div class="mt-7 w-full sm:inline-flex">
       {primaryBtn && 
       <PrimaryCTA title={primaryBtn} url={primaryBtnURL} />
-      }
-      {secondaryBtn && 
-      <SecondaryCTA title={secondaryBtn} url={secondaryBtnURL} />
       }
     </div>
 
