--- a/src/components/ui/blocks/ReviewComponent.astro
+++ b/src/components/ui/blocks/ReviewComponent.astro
@@ -16,7 +16,7 @@ interface Props {
 <div class="mt-2 lg:mt-6">
   <div class="py-5">
       <!-- Review Ratings -->
-      <div class=" flex flex-col items-center sm:items-start">
+      <div class=" flex flex-col sm:items-start">
         <div class="flex items-baseline space-x-1 pt-5 sm:ps-2  sm:pt-0">
           <div class="flex space-x-1">
             <!-- Your star ratings -->
