facebook page removed

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -15,7 +15,7 @@ const pageTitle: string = `Contact | ${SITE.title}`;
     "@type": "WebPage",
     "@id": "https://danfe.pages.dev/contact",
     "url": "https://danfe.pages.dev/contact",
-    "name": "Contact Us | ScrewFast",
+    "name": "Contact Us | Danfe",
     "description":
       "Have questions or want to discuss a project? Reach out, and let's craft the perfect solution with our tools and services.",
     "isPartOf": {
