--- a/src/components/sections/ContactSection.astro
+++ b/src/components/sections/ContactSection.astro
@@ -34,7 +34,7 @@ const formSubTitle: string = "We'll get back to you in 1-2 business days.";
           Contact Us
         </h2>
         <ContactBtn title="Whatsapp" href="https://wa.me/message/Q4SH6APVW7GCG1" />
-        <ContactBtn title="Facebook" href="https://www.facebook.com/danfesolutions/"/>
+        <ContactBtn title="Facebook" href="#facebook"/>
         <ContactBtn title="Email" href="mailto:danfesolutions0@gmail.com"/>
         
       </div>
